# ComputerVision

./: README.md
Lab2/: CMakeLists.txt
Lab2/Source/: mainCode.cpp  minMaxFunction.cpp  minMaxFunction.h
